<resources>
    <string name="app_name">FrenchPastry</string>
    <string name="logo_main_desc">logo main</string>
    <string name="login_image_pastry_desc">login image pastry</string>
    <string name="_09">09*********</string>
    <string name="login_to_app">ورود به برنامه</string>
    <string name="french_pastry">شیرینی فرانسوی</string>
    <string name="send_code">ارسال کد تایید</string>
    <string name="code_login">کد تایید</string>
    <string name="confirm_code">تایید کد و ادامه</string>
    <string name="edit_phone">ویرایش شماره</string>
    <string name="resend_code">ارسال مجدد</string>
    <string name="enter_code_sample">_ _ _ _ _</string>
    <string name="not_internet">لطفا گوشی خود را به اینترنت متصل کنید</string>
    <string name="internet_error_desc">آیکن هشدار اینترنت</string>
    <string name="retry">تلاش مجدد</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="settings">تنظیمات</string>
    <string name="error">خطا</string>
    <string name="image_home_desc">image_home</string>
    <string name="image_cake_desc">image_cake</string>
    <string name="image_pastry_desc">image_pastry</string>
    <string name="image_profile_desc">image_profile</string>
    <string name="image_shopping_desc">image_shopping</string>
    <string name="alert_icon_desc">alert_icon</string>
    <string name="profile">پروفایل کاربری</string>
    <string name="my_orders">سفارشات من</string>
    <string name="support">پشتیبانی</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="upgrade">بروزرسانی نرم افزار</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="open">باز</string>
    <string name="close">بسته</string>
    <string name="menu">menu</string>
    <string name="slider_desc">slider</string>
    <string name="sell">تومان</string>
    <string name="all">بیشتر</string>
    <string name="arrow_desc">arrow</string>
    <string name="f_logo_desc">f_logo</string>
    <string name="off_desc">off</string>
    <string name="shopping_desc">shopping</string>
    <string name="main_image_desc">main_image</string>
    <string name="banner_desc">banner</string>
    <string name="close_desc">close</string>
    <string name="special_cake">کیک اختصاصی</string>
    <string name="orders_desc">orders</string>
    <string name="support_desc">support</string>
    <string name="about_desc">about</string>
    <string name="contact_desc">contact</string>
    <string name="update_desc">update</string>
    <string name="logout_desc">logout</string>
    <string name="image_desc">image</string>
    <string name="category_desc">category</string>
    <string name="comment_desc">comment</string>
    <string name="share_desc">share</string>
    <string name="favorite_desc">imgFavorite</string>
    <string name="star_desc">star</string>
    <string name="state_sell">وضعیت سفارشات</string>
    <string name="img_sell_desc">img_sell</string>
    <string name="user_info">اطلاعات کاربری</string>
    <string name="men">مرد</string>
    <string name="sex">جنسیت :</string>
    <string name="women">زن</string>
    <string name="save_info">ثبت اطلاعات</string>
    <string name="date">تاریخ تولد :</string>
    <string name="search_desc">search_desc</string>
    <string name="detail">توضیحات</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها</string>
    <string name="comment">نظرات کاربران</string>
    <string name="send_comment">ثبت نظر</string>
    <string name="creator">مواد تشکیل دهنده</string>
    <string name="favorite">علاقه مندی ها</string>
    <string name="about_me">قنادی فرانسوی تولید کننده با کیفیت ترین شیرینی های تر و خشک نظیر نون خامه ای، باقلوا، رولت، ناپلئونی، پای سیب، دانمارکی و غیره است. شیرینی فروشی فرانسوی اولین و بهترین تولید کننده باقلوای کنوفه در استان خراسان جنوبی میباشد. اپلیکیشن شیرینی فرانسوی از سال 1402 در دسترس دوستان و همشهریان عزیز بیرجندی قرار گرفته است.</string>
    <string name="comment_hint">نظر خود را بنویسید</string>
    <string name="img_rate_desc">img_rate</string>
    <string name="hide">نامشخص</string>
    <string name="add_to_shop">افزودن به سبد خرید</string>
    <string name="sell_normal">سفارش عادی</string>
    <string name="sell_big">سفارش عمده</string>
    <string name="kg">(kg)</string>
    <string name="tone">انتخاب وزن</string>
    <string name="off">با تخفیف</string>
    <string name="price_base">قیمت پایه</string>
    <string name="price_total">مبلغ نهایی</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="one_number">1</string>
    <string name="continue_sell">ادامه فرآیند ثبت سفارش</string>
    <string name="not_favorite">محصول منتخبی وجود ندارد</string>
    <string name="add_address">افزودن آدرس جدید</string>
    <string name="address">آدرس :</string>
    <string name="phone_number">شماره تماس :</string>
    <string name="getting">گیرنده :</string>
    <string name="add_new_address">ثبت آدرس</string>
    <string name="delete">حذف</string>
    <string name="delete_question">آیا مایل به حذف این آیتم هستید؟</string>
    <string name="canceling">انصراف دادن</string>
    <string name="deleting">حذف کردن</string>
    <string name="add_image">افزودن تصویر</string>
    <string name="select">انتخاب طبقه</string>
    <string name="detail_cake">توضیحات خود را بنویسید</string>
</resources>